src/snapshots/templates__renderer__test__render_builder_block.snap
---
source: src/renderer.rs
assertion_line: 311
expression: "{> with name as StringBuilder\nHello {[ name ]}, good to meet you"

---
import gleam/string_builder.{StringBuilder}
import gleam/list



pub fn render_builder(name name: StringBuilder) -> StringBuilder {
    let builder = string_builder.from_string("")
    let builder = string_builder.append(builder, "Hello ")
    let builder = string_builder.append_builder(builder, name)
    let builder = string_builder.append(builder, ", good to meet you")

    builder
}

pub fn render(name name: StringBuilder) -> String {
    string_builder.to_string(render_builder(name: name))
}

