src/snapshots/templates__renderer__test__render_dot_access.snap
---
source: src/renderer.rs
assertion_line: 268
expression: "{> with user as MyUser\nHello{% if user.is_admin %} Admin{% endif %}"

---
import gleam/string_builder.{StringBuilder}
import gleam/list



pub fn render_builder(user user: MyUser) -> StringBuilder {
    let builder = string_builder.from_string("")
    let builder = string_builder.append(builder, "Hello")
    let builder = case user.is_admin {
        True -> {
                let builder = string_builder.append(builder, " Admin")

            builder
        }
        False -> {
            
            builder
        }
}

    builder
}

pub fn render(user user: MyUser) -> String {
    string_builder.to_string(render_builder(user: user))
}

