src/snapshots/templates__renderer__test__render_empty_if_statement.snap
---
source: src/renderer.rs
assertion_line: 227
expression: "{> with is_user as Bool\nHello {% if is_user %}{% endif %}"

---
import gleam/string_builder.{StringBuilder}
import gleam/list



pub fn render_builder(is_user is_user: Bool) -> StringBuilder {
    let builder = string_builder.from_string("")
    let builder = string_builder.append(builder, "Hello ")
    let builder = case is_user {
        True -> {
            
            builder
        }
        False -> {
            
            builder
        }
}

    builder
}

pub fn render(is_user is_user: Bool) -> String {
    string_builder.to_string(render_builder(is_user: is_user))
}

