src/snapshots/templates__renderer__test__render_for_as_loop.snap
---
source: src/renderer.rs
assertion_line: 275
expression: "{> with list as List(Item)\nHello,{% for item as Item in list %} to {{ item }} and {% endfor %} everyone else"

---
// DO NOT EDIT: Code generated by templates from -test-

import gleam/string_builder.{StringBuilder}
import gleam/list



pub fn render_builder(list list: List(Item)) -> StringBuilder {
    let builder = string_builder.from_string("")
    let builder = string_builder.append(builder, "Hello,")
    let builder = list.fold(list, builder, fn(builder, item: Item) {
            let builder = string_builder.append(builder, " to ")
    let builder = string_builder.append(builder, item)
    let builder = string_builder.append(builder, " and ")

        builder
})
    let builder = string_builder.append(builder, " everyone else")

    builder
}

pub fn render(list list: List(Item)) -> String {
    string_builder.to_string(render_builder(list: list))
}

