src/snapshots/templates__renderer__test__render_if_statement.snap
---
source: src/renderer.rs
assertion_line: 234
expression: "{> with is_user as Bool\nHello {% if is_user %}User{% endif %}"

---
// DO NOT EDIT: Code generated by templates from -test-

import gleam/string_builder.{StringBuilder}
import gleam/list



pub fn render_builder(is_user is_user: Bool) -> StringBuilder {
    let builder = string_builder.from_string("")
    let builder = string_builder.append(builder, "Hello ")
    let builder = case is_user {
        True -> {
                let builder = string_builder.append(builder, "User")

            builder
        }
        False -> {
            
            builder
        }
}

    builder
}

pub fn render(is_user is_user: Bool) -> String {
    string_builder.to_string(render_builder(is_user: is_user))
}

